[package]
name = "RSnake"
description = "A snake game written in Rust"
version = "0.1.0"
authors = ["Gheorghiță Mutu <gheorghitamutu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = "*"
